# alphabeta

./: .gitignore  alphabeta.cabal  cabal.project  hie.yaml  readme.md
.hie/: BoundedEval.hie  Main.hie
src/: BoundedEval.hs
